[gd_scene load_steps=12 format=3 uid="uid://btmorb7pmxgv5"]

[ext_resource type="Script" uid="uid://dmsxe5bbgsccv" path="res://ipad_kid.gd" id="1_evoj7"]
[ext_resource type="Texture2D" uid="uid://4fywo48xm5mv" path="res://icon.svg" id="2_vxrxx"]
[ext_resource type="Script" uid="uid://co8oqa05uq0n0" path="res://flippable_sprite.gd" id="3_m1svn"]
[ext_resource type="PackedScene" uid="uid://dijioq58keg5t" path="res://hurtbox_component.tscn" id="4_6xvki"]
[ext_resource type="PackedScene" uid="uid://4t60jr6i5bnr" path="res://flippable_shape.tscn" id="5_5mp51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yqyl"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_hb8ge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hurtbox_component/flippable_shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position_y_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:position_x_offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_epg4t"]
resource_name = "death"
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.566370614359172]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurtbox_component/flippable_shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wujgv"]
resource_name = "hurt"
length = 0.50000167
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3yqyl"]
resource_name = "launch"
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position_y_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.6666667, 0.8333333, 1),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2, 1),
"update": 0,
"values": [0.0, -120.0, 0.0, -40.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position_x_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 100.0, 150.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1ltt"]
_data = {
&"RESET": SubResource("Animation_hb8ge"),
&"death": SubResource("Animation_epg4t"),
&"hurt": SubResource("Animation_wujgv"),
&"launch": SubResource("Animation_3yqyl")
}

[node name="enemy" type="Node2D"]
script = ExtResource("1_evoj7")

[node name="FlippableSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_vxrxx")
script = ExtResource("3_m1svn")
metadata/_custom_type_script = "uid://co8oqa05uq0n0"

[node name="hurtbox_component" parent="." node_paths=PackedStringArray("flippable_sprite", "parent") instance=ExtResource("4_6xvki")]
flippable_sprite = NodePath("../FlippableSprite")
parent = NodePath("..")

[node name="flippable_shape" parent="hurtbox_component" node_paths=PackedStringArray("flippable_sprite") instance=ExtResource("5_5mp51")]
shape = SubResource("RectangleShape2D_3yqyl")
debug_color = Color(0, 0.55536246, 0.9003438, 0.41960785)
flippable_sprite = NodePath("../../FlippableSprite")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e1ltt")
}

[node name="invulntimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="invulntimer" to="." method="_on_invulntimer_timeout"]
